@@ -753,3 +753,8 @@ Info: The maintainer script appears to use <tt>dpkg-statoverride --add</tt>
  without a prior call to <tt>dpkg-statoverride --list</tt> to check the
  current status.
 Ref: policy 10.9.1
+
+Tag: elf-maintainer-script
+Severity: classification
+Certainty: certain
+Info: The maintainer script is an ELF binary.
