@@ -1,6 +1,8 @@
 Testname: scripts-does-not-start-with-shebang
 Type: native
 Version: 1.0
+Options: -L +classification -C scripts
 Description: Check for maintainer scripts that do not start with #!
 Test-For:
  script-without-interpreter
+ elf-maintainer-script
