@@ -73,6 +73,8 @@ lintian (2.5.52) UNRELEASED; urgency=medium
       corresponding --list.  (Closes: #652963)
     + [CL] Add missing "contains" verb to the description of the
       debhelper-autoscript-in-maintainer-scripts tag.
+    + [CL] Emit new "elf-maintainer-script" classification tag if
+      debian/postinst (etc.) is an ELF binary.
   * checks/rules.desc:
     + [CL] Clarify wording in debian-rules-parses-dpkg-parsechangelog to
       make the justification clearer.  (Closes: #865882)
